@@ -24,15 +24,15 @@ namespace AjIo.Tests.Language
         }
 
         [TestMethod]
-        public void ExecuteAddMethod()
+        public void ExecuteAppendMethod()
         {
             ListObject obj = new ListObject(new IoObject());
-            obj.Evaluate(new Message("add", new object[] { 1 }));
-            object result = obj.Evaluate(new Message("count"));
+            obj.Evaluate(new Message("append", new object[] { 1 }));
+            object result = obj.Evaluate(new Message("size"));
             Assert.AreEqual(1, result);
             Assert.AreEqual(1, obj.Count);
-            obj.Evaluate(new Message("add", new object[] { 2 }));
-            result = obj.Evaluate(new Message("count"));
+            obj.Evaluate(new Message("append", new object[] { 2 }));
+            result = obj.Evaluate(new Message("size"));
             Assert.AreEqual(2, result);
             Assert.AreEqual(2, obj.Count);
         }
@@ -41,11 +41,11 @@ namespace AjIo.Tests.Language
         public void ExecuteRemoveMethod()
         {
             ListObject obj = new ListObject(new IoObject());
-            obj.Evaluate(new Message("add", new object[] { 1 }));
-            obj.Evaluate(new Message("add", new object[] { 2 }));
-            obj.Evaluate(new Message("add", new object[] { 3 }));
+            obj.Evaluate(new Message("append", new object[] { 1 }));
+            obj.Evaluate(new Message("append", new object[] { 2 }));
+            obj.Evaluate(new Message("append", new object[] { 3 }));
             obj.Evaluate(new Message("remove", new object[] { 1 }));
-            Assert.AreEqual(2, obj.Evaluate(new Message("count")));
+            Assert.AreEqual(2, obj.Evaluate(new Message("size")));
             Assert.AreEqual(2, obj.Count);
             Assert.AreEqual(2, obj.Evaluate(new Message("at", new object[] { 0 })));
             Assert.AreEqual(2, obj[0]);
@@ -61,6 +61,38 @@ namespace AjIo.Tests.Language
             Assert.AreEqual(1, obj[0]);
             Assert.AreEqual(2, obj[1]);
             Assert.AreEqual(3, obj[2]);
+        }
+
+        [TestMethod]
+        public void AtPut()
+        {
+            ListObject obj = new ListObject(new IoObject(), new object[] { 1, 2, 3 });
+            obj.Evaluate(new Message("atPut", new object[] { 1, 20 }));
+            Assert.AreEqual(3, obj.Count);
+            Assert.AreEqual(1, obj[0]);
+            Assert.AreEqual(20, obj[1]);
+            Assert.AreEqual(3, obj[2]);
+        }
+
+        [TestMethod]
+        public void AtInsert()
+        {
+            ListObject obj = new ListObject(new IoObject(), new object[] { 1, 2, 3 });
+            obj.Evaluate(new Message("atInsert", new object[] { 1, 20 }));
+            Assert.AreEqual(4, obj.Count);
+            Assert.AreEqual(1, obj[0]);
+            Assert.AreEqual(20, obj[1]);
+            Assert.AreEqual(2, obj[2]);
+            Assert.AreEqual(3, obj[3]);
+        }
+
+        [TestMethod]
+        public void PrintString()
+        {
+            ListObject obj = new ListObject(new IoObject(), new object[] { 1, "foo", 3 });
+            string result = Machine.PrintString(obj);
+
+            Assert.AreEqual("list(1, \"foo\", 3)", result);
         }
     }
 }
